# Bismillah

./: docker-compose.yml  index_crazy_awesome_gui.html
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/ai/: activations.rs  layers.rs  loss.rs  math_utils.rs  mod.rs  model.rs  optimizer.rs  tensor.rs
frontend/: index.html  nginx.conf
