# Cargo.toml

[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"

# Data handling and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Numerical computation
ndarray = "0.15"
ndarray-rand = "0.14"
rand = "0.8"
rayon = "1.8"

# System information
sysinfo = "0.30"

# Asynchronous runtime
tokio = { version = "1.37", features = ["full"] }

# UUID generation
uuid = { version = "1.7", features = ["v4"] }

tower-http = { version = "0.4.4", features = ["cors"] }