[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
ndarray = "0.15"
ndarray-rand = "0.14"
rand = "0.8"
rayon = "1.8"
sysinfo = "0.30"
tokio = { version = "1.37", features = ["full"] }
uuid = { version = "1.7", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"